@@ -1,7 +1,6 @@
 archive_emails_not_having_message_id=0
 backlog=20
 cipher_list=ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS
-clamd_socket=/var/run/clamav/clamd.ctl
 default_retention_days=2557
 enable_chunking=1
 enable_cjk=0
