@@ -19,8 +19,6 @@ typedef unsigned long long uint64;
 #define QUEUE_DIR DATADIR "/piler/store"
 #define ERROR_DIR DATADIR "/piler/error"
 
-#define CLAMD_SOCKET "/tmp/clamd"
-
 #define PIDFILE "/var/run/piler/piler.pid"
 #define QUARANTINELEN 255
 #define TIMEOUT 60
